# url-shortener-nginx

./: .env  .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: tests.yml
nginx/: Dockerfile  entrypoint.sh  launch.sh  nginx.conf
tests/: conftest.py  test_build.py  test_run.py  utils.py
