[tool.poetry]
name = "NGINX Reverse Proxy"
description = "Reverse proxy for URL shortener."
authors = ["kramber1024 <kramber268@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
